# click-with-aliasing

./: README.md  pyproject.toml
.github/workflows/: publish.yml
click_with_alias/: command.py
click_with_aliasing/: __init__.py  _aliased_group.py  command.py  group.py
tests/: test_group.py
